--- a/soderlunds/package.json
+++ b/soderlunds/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ig-feed": "^1.0.4",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
